# SafeHaven

./: .gitignore  AGENTS.md  AIREADTHIS.txt  Code.docx  Data collection procedures_1_mod.docx  ESET420 Software Manual.md  Links.docx  README.md  Software Documentation REV5.docx  justfile  pyproject.toml  readmetemplate.md  test.py
MATLAB/: mainSAR.m  (+2 more)
Safehaven-Classification/: README.md  check_gpu.py  generate_reflectivity_dataset.py  mainSARneuronauts2py_rev3_2.py  pyproject.toml  requirements.txt  weapon_classifier.pth.classes  weapon_classifier.py
Safehaven-Classification/reflectivepaper/: reflectivepaper.md  reflectivepaper_meta.json
Safehaven-Lua/: README.md  batch_process_dumps.py  clean_dumps.py  config.xml  mainSARneuronauts2py.py  mainSARneuronauts2py_rev2.py  mainSARneuronauts2py_rev3.py  mainSARneuronauts2py_rev3_2.py  pyproject.toml  rasterscan.py  sar_scan_rev11.lua  sar_scan_rev13.lua  sar_scan_rev14.lua  sar_scan_rev15.lua  sar_scan_rev3.lua  sar_scan_rev4.lua  sar_scanlua_rev11log.txt  workingpowershellcommand_referencereadme.md
Safehaven-Lua/archive/: sar_scan_rev4.lua
SoftwareDemo/: GPO.py  SnakePathAlgorithm.py  coords.json  main.py  motorFunc.py  print_face_pos.py  pyproject.toml
SoftwareDemo/BoundaryBoxDetect_V1.2/: BoundaryBoxDetect.py  readme.md  requirements.txt
SoftwareDemo/GantryFunctionality/: LED_OutputTest_rev1.py  RunState.py  motorTest_rev2.py  motorTest_rev3.py  motorTest_rev4.py
SoftwareDemo/GantryFunctionality/HallEffect/: HomingSwitch.py
SoftwareDemo/PiCamera/: HeadlessPersonTracker.py  IMX708_PiCamAI.py  PersonAndWeaponScan.py  PiCameraAI copy.py  PiCameraAI.py  PiCameraAI_rev2.py  PiCameraTest.py  Snapshot_0001_2025-12-05_21-01-11.json  Snapshot_0002_2025-12-05_22-54-06.json  box_coords.json  faceposition.txt
SoftwareDemo/ScreenCapture_V1.4/: ScreenCapture.py  readme.md  requirements.txt
SoftwareDemo/SnakePathAlgorithm_V1.3/: SnakePathAlgorithm.py
SoftwareDemo/SnakepathAlgorithm/: SnakePathAlgorithm.py  SnakePathGen.py
(+294 files in other folders)
