[project]
name = "safehaven-classification"
version = "0.1.0"
description = "Weapon classification and dataset generation for SafeHaven"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
    "torchvision",
    "pillow",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }